@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.snnow" name="Sportsnet Now" version="1.0.9" provider-name="Micah Galizia">
+<addon id="plugin.video.snnow" name="Sportsnet Now" version="1.17.11" provider-name="Micah Galizia">
   <requires>
-    <import addon="xbmc.python"   version="2.1.0"/>
+    <import addon="xbmc.python"   version="2.25.0"/>
   </requires>
   <extension point="xbmc.python.pluginsource" library="default.py">
 	<provides>video</provides>
